# ModernCpp

./: CMakeLists.txt  README.md  units.cpp  units.h
include/: lambda.h  unit.h  units.h
src/: lambda.cpp  main.cpp  unit.cpp  units.cpp
test/: CMakeLists.txt  lambda.cpp  main.cpp  simple.cpp  unit.cpp
